# IoT-covid-sensoring

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
components/gatt_table/: CMakeLists.txt  component.mk  gatt_table.c  gatt_table.h
main/: CMakeLists.txt  Kconfig.projbuild  common.h  main.c
main/ble_beacon_counter/: ble_beacon_counter.c  ble_beacon_counter.h
main/ccs811_sensor/: ccs811.c  ccs811.h
main/circular_buffer/: circular_buffer.c  circular_buffer.h
main/gatt_table/: gatt_table.c  gatt_table.h
main/i2c_controller/: i2c_controller.c  i2c_controller.h
main/si7021_sensor/: example.c  si7021.c  si7021.h
main/temperatre_sensor/: temperature.c
main/wifi_controller/: wifi_controller.c  wifi_controller.h
src/: Kconfig.projbuild  common.h  main.c
src/gatt/: gatt_table.c  gatt_table.h
src/main/: gatt_table.h  main.c
